@@ -1,3 +1,8 @@
+2007-10-18  Marcus Brinkmann  <marcus@g10code.de>
+
+	* assuan-handler.c (std_handler_help): New function.
+	(std_cmd_table): Add new command HELP.
+
 2007-10-08  Werner Koch  <wk@g10code.com>
 
 	* assuan-util.c (assuan_set_io_hooks): New.
