@@ -1,3 +1,7 @@
+2007-10-18  Marcus Brinkmann  <marcus@g10code.de>
+
+	* assuan.texi (Client requests): Document HELP.
+
 2007-09-07  Moritz Schulte  <moritz@g10code.com>
 
 	* assuan.texi (Client code): mention assuan_send_data() instead of
